--- a/src/components/CodeEditor/CodeEditor.scss
+++ b/src/components/CodeEditor/CodeEditor.scss
@@ -18,12 +18,6 @@
     @apply font-mono;
   }
 
-  .cm-focused .cm-selectionBackground,
-  .cm-selectionBackground,
-  ::selection {
-    @apply bg-red-100 dark:bg-red-900;
-  }
-
   .cm-scroller {
     @apply font-mono;
   }
@@ -59,6 +53,12 @@
 
   .cm-activeLineGutter,
   .cm-activeLine {
-    @apply bg-[#e2e2e2] dark:bg-[#2f2f2f];
+    @apply bg-[#e2e2e2]/50 dark:bg-[#2f2f2f]/50;
+  }
+
+  .cm-focused .cm-selectionBackground,
+  .cm-selectionBackground,
+  ::selection {
+    @apply bg-red-100 dark:bg-red-900;
   }
 }
