--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 @import './typography';
-@import './components';
 @import './syntaxHighlighting';
 
 @supports (font-variation-settings: normal) {
@@ -12,6 +11,14 @@
 
 @import '~@fontsource/fira-mono/400.css';
 @import '~@fontsource/fira-mono/700.css';
+
+@layer components {
+  .Breakout {
+    @apply -mx-container-base;
+    @apply desktop:mx-0;
+    @apply expanded:-mx-breakout;
+  }
+}
 
 html {
   @screen base {
@@ -131,8 +138,41 @@ h5 {
 }
 
 blockquote {
-  @apply Blockquote;
   @apply Breakout;
+
+  @apply text-[1.44rem] desktop:text-[1.6rem];
+  @apply -tracking-[0.5px];
+  @apply font-black italic;
+
+  @apply -tracking-[0.5px] font-black italic;
+
+  @apply pt-normal pr-normal pb-normal pl-big;
+  @apply desktop:pt-big desktop:pr-big desktop:pb-big desktop:pl-large;
+
+  @apply relative leading-[1.5];
+
+  @apply text-text-bold dark:text-text-bold-dark;
+  @apply bg-caption-bg dark:bg-caption-bg-dark;
+
+  > * {
+    @apply p-0 m-0;
+  }
+
+  &::before {
+    content: '';
+
+    @apply h-[10px] w-[14px];
+
+    @apply bg-quote dark:bg-quote-dark;
+    @apply bg-center bg-no-repeat;
+
+    @apply text-primary mr-little;
+
+    @apply absolute;
+
+    @apply top-[1.9rem] left-[1.1rem];
+    @apply desktop:top-[3.3rem] desktop:left-[2.3rem];
+  }
 }
 
 .body-styles {
@@ -140,19 +180,12 @@ blockquote {
     @apply bg-caption-bg dark:bg-caption-bg-dark;
   }
 
-  /* h2,
-  h3 {
-    @apply leading-[1.2] text-text-bold dark:text-text-bold-dark;
-  } */
-
   h2 {
     @apply mt-large mb-small;
-    /* @apply Text-Heading; */
   }
 
   h3 {
     @apply mt-medium mb-small;
-    /* @apply Text-Subheading; */
   }
 
   p {
