--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,28 +1,29 @@
 @layer components {
   .h1-common {
-    @apply uppercase;
+    /* @apply uppercase; */
+    @apply font-display;
     @apply font-black;
-    @apply italic;
+    /* @apply italic; */
 
-    @apply text-white;
+    @apply text-text-bold dark:text-text-bold-dark;
 
     // background on internal span
-    @apply [&>span]:bg-primary [&>span]:dark:bg-primary-dark;
+    /* @apply [&>span]:bg-primary [&>span]:dark:bg-primary-dark; */
 
     // sets the box decoration to behave as if it's one continuous fragment
-    @apply [&>span]:box-decoration-clone;
+    /* @apply [&>span]:box-decoration-clone; */
   }
 
   .h1-featured {
     @apply h1-common;
 
     @apply text-[2.45333334rem] desktop:text-[3.06666667rem];
-    @apply -tracking-[1px] desktop:-tracking-[1.5px];
+    /* @apply -tracking-[1px] desktop:-tracking-[1.5px]; */
 
-    @apply [&>span]:shadow-header-display [&>span]:dark:shadow-header-display-dark;
+    /* @apply [&>span]:shadow-header-display [&>span]:dark:shadow-header-display-dark; */
 
     // spacing around edges of span
-    @apply pl-[10px] [&>span]:pt-[4px] [&>span]:pb-[4px];
+    /* @apply pl-[10px] [&>span]:pt-[4px] [&>span]:pb-[4px]; */
 
     @apply leading-[1.2];
   }
@@ -31,33 +32,40 @@
     @apply h1-common;
 
     @apply text-[1.92rem] desktop:text-[2.4rem];
-    @apply -tracking-[0.5px] desktop:-tracking-[1px];
+    /* @apply -tracking-[0.5px] desktop:-tracking-[1px]; */
 
-    @apply [&>span]:shadow-header-title [&>span]:dark:shadow-header-title-dark;
-    @apply pl-[7px] [&>span]:pt-[2px] [&>span]:pb-[2px];
-    @apply leading-[1.4];
+    /* @apply [&>span]:shadow-header-title [&>span]:dark:shadow-header-title-dark; */
+    /* @apply pl-[7px] [&>span]:pt-[2px] [&>span]:pb-[2px]; */
+    @apply leading-[1.2];
   }
 
   .h2 {
+    @apply font-display;
     @apply text-[1.49333333rem] desktop:text-[1.8666666667rem];
-    @apply -tracking-[0.5px] desktop:-tracking-[1px];
+    /* @apply -tracking-[0.5px] desktop:-tracking-[1px]; */
     @apply font-black;
-    @apply italic;
+    /* @apply italic; */
 
     @apply leading-[1.2] text-text-bold dark:text-text-bold-dark;
   }
 
   .h3 {
+    @apply font-display;
     @apply text-[1.28rem] desktop:text-[1.6rem];
-    @apply -tracking-[0.5px] font-black italic;
+    /* @apply -tracking-[0.5px]; */
+    @apply font-black;
+    /* @apply italic; */
 
     @apply leading-[1.2];
     @apply text-text-bold dark:text-text-bold-dark;
   }
 
   .h4 {
+    @apply font-display;
     @apply text-[1.18rem] desktop:text-[1.4rem];
-    @apply -tracking-[0.2px] font-black italic;
+    /* @apply -tracking-[0.2px]; */
+    @apply  italic;
+    @apply font-black;
 
     @apply leading-[1.1];
     @apply text-text-bold dark:text-text-bold-dark;
