Bigger text on desktop

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,13 +26,13 @@
 }
 
 html {
-  /* @screen base {
+  @screen base {
     font-size: 16px;
   }
 
   @screen collapsed {
-    font-size: 15px;
-  } */
+    font-size: 18px;
+  }
 }
 
 body {
