--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,8 @@
   @import '~@fontsource/inter/variable-full.css';
 }
 
+@import '~@fontsource/unbounded/variable.css';
+
 @import '~@fontsource/fira-mono/400.css';
 @import '~@fontsource/fira-mono/700.css';
 
@@ -16,6 +18,18 @@
 @import '~@fontsource/source-serif-pro/400-italic.css';
 @import '~@fontsource/source-serif-pro/700.css';
 @import '~@fontsource/source-serif-pro/700-italic.css';
+
+@import '~@fontsource/dm-serif-display/400.css';
+@import '~@fontsource/dm-serif-display/400-italic.css';
+
+@import '~@fontsource/playfair-display/400.css';
+@import '~@fontsource/playfair-display/400-italic.css';
+@import '~@fontsource/playfair-display/700.css';
+@import '~@fontsource/playfair-display/700-italic.css';
+
+@import '~@fontsource/shrikhand/400.css';
+
+@import '~@fontsource/calistoga/400.css';
 
 @layer components {
   .Breakout {
