--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,8 @@
 @import '~@fontsource/source-serif-pro/700.css';
 @import '~@fontsource/source-serif-pro/700-italic.css';
 
+@import '~@fontsource/montagu-slab/700.css';
+
 @import './stylesheet.scss';
 
 @layer components {
