--- a/src/styles/syntaxHighlighting.scss
+++ b/src/styles/syntaxHighlighting.scss
@@ -61,7 +61,7 @@ pre[class*='language-'] > code[class*='language'] {
 pre[class*='language-'] {
   @apply BreakoutWithPadding;
 
-  @apply py-medium my-normal;
+  @apply py-medium my-medium;
 
   overflow: auto;
 
