Removed unused code

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,6 +17,10 @@
 @import '~@fontsource/montagu-slab/500.css';
 @import '~@fontsource/montagu-slab/700.css';
 
+@import '~@fontsource/jetbrains-mono/400.css';
+@import '~@fontsource/jetbrains-mono/400-italic.css';
+@import '~@fontsource/jetbrains-mono/700.css';
+
 @import './stylesheet.scss';
 
 @layer components {
