--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import './typography';
 @import './syntaxHighlighting';
 
 @import '~@fontsource/source-serif-pro/400.css';
@@ -29,6 +28,46 @@
       @apply -mx-breakout;
       @apply px-breakout;
     }
+  }
+
+  .h1,
+  .h2,
+  .h3,
+  .h4 {
+    @apply font-display;
+    @apply font-bold;
+  }
+
+  .h1-featured {
+    @apply text-[2.4rem] sm:text-[3.26666667rem];
+    @apply text-black  dark:text-white;
+    @apply leading-[1.2];
+  }
+
+  .h1 {
+    @apply text-[1.65rem] sm:text-[2.3rem];
+    @apply leading-[1.2];
+    @apply text-black  dark:text-white;
+  }
+
+  .h2 {
+    @apply text-[1.4rem] sm:text-[1.7rem];
+
+    @apply leading-[1.2] text-text-bold dark:text-text-bold-dark;
+  }
+
+  .h3 {
+    @apply text-[1.25rem] sm:text-[1.35rem];
+
+    @apply leading-[1.2];
+    @apply text-text dark:text-text-dark;
+  }
+
+  .h4 {
+    @apply text-[1.15rem] sm:text-[1.25rem];
+
+    @apply leading-[1.1];
+    @apply text-text-bold dark:text-text-bold-dark;
   }
 }
 
